# iecServer

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: main.c  modelBuilder.c  modelBuilder.h
